--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>Opportunities<br>don’t happen,<br>you create<br>them.</h2>
+                <h2>to <br>know more<br>click this link </h2>
                 <a href="ucon.html">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
